# Heartbet-Sound-Anomaly-Detector

./: .env.example  .gitignore  Makefile  README.md  backend_app.dockerfile  copy_artifacts.sh  docker-compose.yaml  environment.lock.yaml  pyproject.toml  requirements.txt  torch_serving.dockerfile  tree.txt
backend_app/: __main__.py  fetch_kaggle_dataset.py  model_handler.py  pyproject.toml  requirements.txt  utils.py
backend_app/config/: config.yaml  read_config.py
backend_app/config_management/: config_reader.py  configuration.yaml
config_management/: config_reader.py  configuration.yaml  logger.py
frontend_app/: Dockerfile  pyproject.toml  streamlit_app.py
instructions/: kube_instructions.md
kube_config/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml
model_pipeline/: __main__.py  conf.properties  datasets.py  fetch_kaggle_dataset.py  hearbet_detector_trainer.py  model_handler.py  preprocessing.py  pretrained_network.py  ruff.toml  test_model.py  ts_requirements.txt  utils.py
model_training/: __main__.py  architecture.py  datasets.py  fetch_kaggle_dataset.py  hearbet_detector_trainer.py  preprocessing.py  ruff.toml
notebooks/: exploration.ipynb  training.ipynb
