[tool.poetry]
name = "heartbet-sound-anomaly-detector"
version = "1.0.0"
description = ""
authors = ["Erick <erick@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0.1"
fastapi = "^0.104.1"
kaggle = "^1.5.16"
librosa = "^0.10.1"
numpy = "^1.26.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
matplotlib = "^3.8.2"
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
